Align the text and removed a visual bug

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -21,7 +21,7 @@ h1 {
 main {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 95%;
   align-items: center;
   position: relative;
   top: 50px;
@@ -127,6 +127,7 @@ h3 {
   border-radius: 5px;
   margin-top: 20px;
   padding: 30px;
+
 
       .question-result {
         font-size: 1.5rem;
